--- a/src/Components/Control.scss
+++ b/src/Components/Control.scss
@@ -1,8 +1,11 @@
+$color-dark: #424874;
+$color-light: #d6e5e3;
+$color-med: #a6b1e1;
+
 .control {
     border: solid black 1px;
     margin-left: 5%;
     margin-right: 5%;
-    padding-bottom: 75px;
 
     .control-display {
         text-align: center;
@@ -18,32 +21,9 @@
         text-align: center;
     }
 
-    .control-display-text-box {
-        width: 75%;
-        border-bottom: solid black 1px;
-        margin: auto;
-        margin-bottom: 25px;
-        min-width: 250px;
-
-        .control-display-text {
-            margin-left: 5px;
-            margin-right: 5px;
-        }
-    }
-
-    .btn-control-set {
-        display: inline-block;
-        width: 50px;
-        border: solid black 1px;
-        border-radius: 8px;
-        background-color: rgba(0,0,0,0);
-        padding: 2px;
-        cursor: pointer;
-    }
-
     .control-buttons {
-        transform: translateX(50%);
-        float: left;
+        display: flex;
+        justify-content: center;
     }
 
     .btn {
@@ -57,7 +37,7 @@
     }
         
     .btn-control {
-        background-color: rgba(62, 229, 118, 1);
+        background-color: $color-dark;
 
         span {
             display: block;
@@ -67,5 +47,40 @@
             text-align: center;
             transform: translateY(-10%);
         }
+    }
+}
+
+.set-button {
+   display: flex;
+   justify-content: center;
+   padding: 10px;
+}
+
+@keyframes set-click {
+    0% {
+        box-shadow: 5px 2px 5px rgba(0,0,0,0.5);
+    }
+    50% {
+        box-shadow: none;
+        transform: translate(-5px, -2px);
+    }
+    100% {
+        box-shadow: 5px 2px 5px rgba(0,0,0,0.5);
+    }
+}
+
+.btn-set {
+    background-color: $color-light;
+    color: $color-dark;
+    text-align: center;
+    display: inline-block;
+    width: 150px;
+    border-radius: 10px;
+    border: black solid 1px;
+    box-shadow: 5px 2px 5px rgba(0,0,0,0.5);
+    cursor: pointer;
+
+    &:active {
+        animation: set-click 0.5s ease-in-out;
     }
 }
