--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+$color-dark: #424874;
+$color-light: #d6e5e3;
+$color-med: #a6b1e1;
+
 *,
 *::after,
 *::before {
@@ -14,5 +18,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  background-color: $color-light;
 }
 
